Add edit, update, and destory feature to restaurantly Create edit controller Create udpate controller Create destroy controller Create edit views Update index views Update tests

--- a/app/views/restaurants/index.html.haml
+++ b/app/views/restaurants/index.html.haml
@@ -7,3 +7,5 @@
     - @restaurants.each do |restaurant|
       %h5.subheader
         = restaurant.name
+        = link_to "edit", edit_restaurant_path(restaurant)
+        = link_to "destroy", restaurant_path(restaurant), method: :delete
